Add --enable-native-access=javafx.graphics to all packaging scripts